--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <title>Document</title>
 </head>
 <body>
+    <a href="about.html">About</a>
     <form> 
         <input type="text" name="name" placeholder="Name">
         <input type="email" name="email" placeholder="Email">   
+        <input type ="password" name="password" placeholder="Password">
+        <button type="submit">Submit</button>
     </form>
 </body>
 </html>
