Update about and index pages

--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="about.html">About</a>
+    
     <form> 
         <input type="text" name="name" placeholder="Name">
         <input type="email" name="email" placeholder="Email">   
         <input type ="password" name="password" placeholder="Password">
         <button type="submit">Submit</button>
+        <p>     this is </p>
     </form>
 </body>
 </html>
