--- a/about.html
+++ b/about.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>this is about page</h1>
+     <h1>this is about page</h1>
+      <h1>this is about page</h1>
 </body>
 </html>
