Updated mars submodule

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <a href = about.html> about</a>
     <form> 
         <input type="text" name="name" placeholder="Name">
         <input type="email" name="email" placeholder="Email">   
