--- a/index.html
+++ b/index.html
@@ -4,10 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link   rel="stylesheet" href="style.css">
 </head>
 <body>
+    <body>  
+
+<section class="page" id="home">
+  <h1>Home Content</h1>
+</section>
+
+<section class="page" id="about">
+  <h1>About Content</h1>
+</section>
+
+<section class="page" id="contact">
+  <h1>Contact Content</h1>
+</section>
+
+</body>
     <a href = about.html> about</a>
-    <form> 
+    <form action =/submit method="post"> 
         <input type="text" name="name" placeholder="Name">
         <input type="email" name="email" placeholder="Email">   
         <input type ="password" name="password" placeholder="Password">
